<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ai_glass_1">Unable to connect to the network at present, please check whether the network settings are normal</string>
    <string name="album_glass_1">recording</string>
    <string name="album_glass_10">Save to album successfully</string>
    <string name="album_glass_10_1">Failed to save to album</string>
    <string name="album_glass_10_2">Save to:%s</string>
    <string name="album_glass_11">No pictures yet</string>
    <string name="album_glass_11_0">No collection yet</string>
    <string name="album_glass_12">No video yet</string>
    <string name="album_glass_13">No recording yet</string>
    <string name="album_glass_14">WiFi connection failed</string>
    <string name="album_glass_15">Confirm to delete?</string>
    <string name="album_glass_16">Select All</string>
    <string name="album_glass_17">Finish</string>
    <string name="album_glass_18">%s items selected</string>
    <string name="album_glass_19">Deselect All</string>
    <string name="album_glass_2">today</string>
    <string name="album_glass_20">Share Success</string>
    <string name="album_glass_21">Successfully added</string>
    <string name="album_glass_22">Successfully canceled the collection</string>
    <string name="album_glass_23">Album Settings</string>
    <string name="album_glass_24">Image Watermark</string>
    <string name="album_glass_25">Add watermark when sharing pictures on social platforms</string>
    <string name="album_glass_26">Autosave</string>
    <string name="album_glass_28">When the picture is synchronized to the APP, it will be automatically saved to the mobile phone system album</string>
    <string name="album_glass_29">HeyCyan wants to access your system photo album</string>
    <string name="album_glass_3">yesterday</string>
    <string name="album_glass_30">If not allowed, you will not be able to save photos locally</string>
    <string name="album_glass_31">Go to Settings</string>
    <string name="album_glass_31_1">Go to edit</string>
    <string name="album_glass_32">Shot on AI Glasses</string>
    <string name="album_glass_33">WiFi connection failed, retrying</string>
    <string name="album_glass_34">Start Upgrading</string>
    <string name="album_glass_35">Please turn on your mobile WiFi</string>
    <string name="album_glass_36">The glasses are in recording mode. Please end it before importing.</string>
    <string name="album_glass_37">The glasses are in dialogue mode, please end it before importing</string>
    <string name="album_glass_38">The glasses are in OTA mode, please end it before importing</string>
    <string name="album_glass_39">The glasses are in recording mode. Please end it before importing.</string>
    <string name="album_glass_4">Connecting to Glasses Wi-Fi...</string>
    <string name="album_glass_40">The glasses are in photo mode, please end it before importing</string>
    <string name="album_glass_41">The battery level of the glasses is less than 15%, please charge first</string>
    <string name="album_glass_42">Retry</string>
    <string name="album_glass_43">The recording file is being processed, please try again later</string>
    <string name="album_glass_44">You are currently in transfer mode. Please end the transfer before starting the translation</string>
    <string name="album_glass_45">Glasses are in transfer mode, please restart after the transfer is complete</string>
    <string name="album_glass_46">Glasses are in transfer mode, please restart after the transfer is complete</string>
    <string name="album_glass_5">save</string>
    <string name="album_glass_6">share</string>
    <string name="album_glass_7">collect</string>
    <string name="album_glass_8">edit</string>
    <string name="album_glass_9">delete</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_image_desc">HeyCyan</string>
    <string name="app_name">HeyCyan</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ble_glass_1">equipment</string>
    <string name="ble_glass_10">"After restarting, the glasses will be automatically reconnected. 
Are you sure you want to continue?"</string>
    <string name="ble_glass_11">Upgrading your firmware</string>
    <string name="ble_glass_12">Firmware upgrade in progress...</string>
    <string name="ble_glass_13">Upgrade failed, please try again</string>
    <string name="ble_glass_14">Upgrade Successfully</string>
    <string name="ble_glass_15">Downloading firmware...</string>
    <string name="ble_glass_18">Bluetooth has been disconnected, please connect the device first</string>
    <string name="ble_glass_19">The firmware version is up to date</string>
    <string name="ble_glass_2">The following devices were found</string>
    <string name="ble_glass_20">No location permission, function cannot be used</string>
    <string name="ble_glass_20_1">Without microphone permission, this feature cannot be used</string>
    <string name="ble_glass_21">The battery level of the glasses is less than %s%%, please charge first</string>
    <string name="ble_glass_22">%ss</string>
    <string name="ble_glass_23">%smin</string>
    <string name="ble_glass_24">WiFi download</string>
    <string name="ble_glass_25">WiFi downloading... %s%%</string>
    <string name="ble_glass_26">Firmware download</string>
    <string name="ble_glass_27">Firmware downloading... %s%%</string>
    <string name="ble_glass_28">WiFi upgrade</string>
    <string name="ble_glass_29">WiFi upgrade... %s%%</string>
    <string name="ble_glass_3">connect</string>
    <string name="ble_glass_30">Firmware upgrade</string>
    <string name="ble_glass_31">Firmware installing...%s%%</string>
    <string name="ble_glass_32">BT is not connected</string>
    <string name="ble_glass_33">After connecting, you can use audio and call functions</string>
    <string name="ble_glass_34">Connect</string>
    <string name="ble_glass_35">Important tips: Do not exit or turn off the screen of your phone during the upgrade, and make sure the glasses are powered on, otherwise the upgrade may fail!</string>
    <string name="ble_glass_36">The glasses have taken photos, please import them from the APP album</string>
    <string name="ble_glass_37">The glasses have started recording, please import them from the APP album</string>
    <string name="ble_glass_38">The glasses have started recording, please import them from the APP album</string>
    <string name="ble_glass_39">Connecting</string>
    <string name="ble_glass_4">Connecting...</string>
    <string name="ble_glass_40">%sh</string>
    <string name="ble_glass_41">Insufficient memory, please import resources from the APP album and try again</string>
    <string name="ble_glass_42">AI assistant is out</string>
    <string name="ble_glass_43">Reminder setting function is not supported</string>
    <string name="ble_glass_44">No recording permission, function is not available, please authorize</string>
    <string name="ble_glass_45">Tell me what you see?</string>
    <string name="ble_glass_5">Unpair glasses?</string>
    <string name="ble_glass_6">Are you sure you want to unpair the current glasses? You need to re-pair them before you can use them again.</string>
    <string name="ble_glass_7">Remove glasses</string>
    <string name="ble_glass_8">Are you sure you want to restore factory settings?</string>
    <string name="ble_glass_9">Restoring factory settings will clear all data on the glasses.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="h_glass_12">continue</string>
    <string name="h_glass_145">HeyCyan AI Assistant</string>
    <string name="h_glass_146">You can wake up the voice assistant at any time and ask questions to it</string>
    <string name="h_glass_147">Say HeyCyan to wake up the voice assistant, and then speak your command or ask a question directly</string>
    <string name="h_glass_148">Normal voice conversation</string>
    <string name="h_glass_149">Here are some questions you can ask your voice assistant:</string>
    <string name="h_glass_153">Take photos and chat</string>
    <string name="h_glass_154">You can ask the voice assistant to take a picture of the environment in front of you, and use image recognition to analyze it and give targeted responses, for example:</string>
    <string name="h_glass_157">continue</string>
    <string name="h_glass_182">Free your hands and control your glasses with your mouth</string>
    <string name="h_glass_183">Please say the wake-up word or long press the touchpad to wake up the voice assistant</string>
    <string name="h_glass_184">Control Music</string>
    <string name="h_glass_185">Play, pause, previous/next song, volume up/down</string>
    <string name="h_glass_186">Make phone calls</string>
    <string name="h_glass_187">Answer the call, reject the call</string>
    <string name="h_glass_188">Filming</string>
    <string name="h_glass_189">Take photos, videos, continuous shooting</string>
    <string name="h_glass_190">other</string>
    <string name="h_glass_191">What time is it now, remaining battery, recording</string>
    <string name="h_glass_222">Explore HeyCyan</string>
    <string name="h_glass_223">"Please wear your glasses properly
Follow the instructions to learn how to operate the touchpad and buttons on the temples of the glasses"</string>
    <string name="h_glass_224">"Check the glasses'fit..."</string>
    <string name="h_glass_225">start</string>
    <string name="h_glass_93">"1. Turn on the glasses and confirm that the blue indicator light is flashing
 2. If the blue indicator light does not flash after the glasses are turned on, please charge for a while and try again
3. The blue indicator light is flashing, click Next"</string>
    <string name="h_glass_94">Prepare your glasses for pairing</string>
    <string name="h_glass_95">Next step</string>
</resources>