<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:background="@color/g_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_close" android:padding="@dimen/glass_dp_6" android:layout_width="@dimen/glass_dp_38" android:layout_height="@dimen/glass_dp_38" android:layout_marginTop="@dimen/glass_sp_12" android:src="@mipmap/ic_guide_close" android:contentDescription="@string/app_name" android:layout_marginEnd="@dimen/glass_dp_18" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textColor="@color/g_white" android:gravity="center" android:id="@id/iv_skip" android:background="@drawable/bg_gray_44_shape" android:visibility="gone" android:layout_width="@dimen/glass_dp_50" android:layout_height="@dimen/glass_dp_26" android:text="@string/h_glass_12" android:layout_marginStart="@dimen/glass_dp_32" app:layout_constraintBottom_toBottomOf="@id/iv_close" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="@id/iv_close" />
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/tv_continue" app:layout_constraintTop_toBottomOf="@id/iv_close">
        <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="@dimen/glass_dp_24" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/iv_logo" android:layout_width="@dimen/glass_dp_48" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_36" android:src="@mipmap/ic_ai_logo" android:adjustViewBounds="true" android:contentDescription="@string/app_image_desc" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/glass_sp_24" android:textColor="@color/g_white" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_20" android:text="@string/h_glass_145" android:layout_marginEnd="@dimen/glass_dp_8" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_logo" />
            <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_color_7" android:gravity="center" android:id="@id/tv_desc_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_8" android:text="@string/h_glass_146" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
            <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_white" android:gravity="center" android:id="@id/tv_desc_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_40" android:text="@string/h_glass_147" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_desc_1" />
            <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_white" android:id="@id/tv_title_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_40" android:text="@string/h_glass_148" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_desc_2" />
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cls_voice" android:background="@drawable/main_setting_bg" android:paddingTop="@dimen/glass_dp_10" android:paddingBottom="@dimen/glass_dp_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_8" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintTop_toBottomOf="@id/tv_title_1">
                <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_color_7" android:id="@id/tv_title_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/h_glass_149" android:layout_marginStart="@dimen/glass_dp_12" android:layout_marginEnd="@dimen/glass_dp_12" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <androidx.recyclerview.widget.RecyclerView android:id="@id/rcy_voice" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_6" android:layout_marginEnd="@dimen/glass_dp_12" app:layout_constraintLeft_toLeftOf="@id/tv_title_2" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_white" android:id="@id/tv_title_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_20" android:text="@string/h_glass_153" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/cls_voice" />
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cls_photo" android:background="@drawable/main_setting_bg" android:paddingTop="@dimen/glass_dp_10" android:paddingBottom="@dimen/glass_dp_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_8" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintTop_toBottomOf="@id/tv_title_3">
                <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_color_7" android:id="@id/tv_title_4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/h_glass_154" android:layout_marginStart="@dimen/glass_dp_12" android:layout_marginEnd="@dimen/glass_dp_12" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <androidx.recyclerview.widget.RecyclerView android:id="@id/rcy_photo" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_6" android:layout_marginEnd="@dimen/glass_dp_12" app:layout_constraintLeft_toLeftOf="@id/tv_title_4" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_btn_submit_color" android:gravity="center" android:id="@id/tv_continue" android:background="@mipmap/btn_bg_screen" android:layout_width="0.0dip" android:layout_height="@dimen/glass_dp_50" android:layout_marginBottom="@dimen/glass_dp_36" android:text="@string/h_glass_157" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
