<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:background="@color/g_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_close" android:padding="@dimen/glass_dp_6" android:layout_width="@dimen/glass_dp_38" android:layout_height="@dimen/glass_dp_38" android:layout_marginTop="@dimen/glass_sp_12" android:src="@mipmap/ic_guide_close" android:contentDescription="@string/app_name" android:layout_marginEnd="@dimen/glass_dp_18" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/image_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_136" android:src="@mipmap/bind_glass_default" android:contentDescription="@string/app_name" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_close" />
    <TextView android:textSize="@dimen/glass_sp_24" android:textColor="@color/g_album_text_2" android:id="@id/tv_title_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_64" android:text="@string/h_glass_222" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/image_1" />
    <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_white" android:gravity="center" android:id="@id/tv_content_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_30" android:text="@string/h_glass_223" android:layout_marginStart="@dimen/glass_dp_54" android:layout_marginEnd="@dimen/glass_dp_54" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_1" />
    <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_color_7" android:ellipsize="marquee" android:gravity="center" android:id="@id/tv_hint" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/glass_dp_50" android:maxWidth="@dimen/glass_dp_300" android:text="@string/h_glass_224" android:singleLine="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
    <TextView android:textSize="@dimen/glass_sp_18" android:textColor="@color/g_btn_submit_color" android:gravity="center" android:id="@id/tv_start" android:background="@mipmap/btn_bg_screen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/glass_dp_50" android:text="@string/h_glass_225" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
