<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:background="@color/g_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/title" layout="@layout/layout_title_bar" />
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/title">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_white" android:id="@id/tv_desc_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_26" android:text="@string/h_glass_182" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_color_7" android:id="@id/tv_desc_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_6" android:text="@string/h_glass_183" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintLeft_toLeftOf="@id/tv_desc_1" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_desc_1" />
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cls_music" android:background="@drawable/main_setting_bg" android:padding="@dimen/glass_dp_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_26" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintTop_toBottomOf="@id/tv_desc_2">
                <ImageView android:id="@id/iv_music" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:src="@mipmap/ic_ability_music" android:contentDescription="@string/app_image_desc" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_white" android:id="@id/tv_title_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/h_glass_184" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintBottom_toTopOf="@id/tv_title_3" app:layout_constraintLeft_toRightOf="@id/iv_music" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
                <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_color_7" android:id="@id/tv_title_3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_8" android:text="@string/h_glass_185" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/iv_music" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cls_phone" android:background="@drawable/main_setting_bg" android:padding="@dimen/glass_dp_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_10" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintTop_toBottomOf="@id/cls_music">
                <ImageView android:id="@id/iv_phone" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:src="@mipmap/ic_ability_phone" android:contentDescription="@string/app_image_desc" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_white" android:id="@id/tv_6" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/h_glass_186" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintBottom_toTopOf="@id/tv_7" app:layout_constraintLeft_toRightOf="@id/iv_phone" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
                <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_color_7" android:id="@id/tv_7" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_8" android:text="@string/h_glass_187" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/iv_phone" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_6" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cls_take" android:background="@drawable/main_setting_bg" android:padding="@dimen/glass_dp_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_10" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintTop_toBottomOf="@id/cls_phone">
                <ImageView android:id="@id/iv_take" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:src="@mipmap/ic_ability_take" android:contentDescription="@string/app_image_desc" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_white" android:id="@id/tv_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/h_glass_188" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintBottom_toTopOf="@id/tv_9" app:layout_constraintLeft_toRightOf="@id/iv_take" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
                <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_color_7" android:id="@id/tv_9" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_8" android:text="@string/h_glass_189" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/iv_take" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_8" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cls_more" android:background="@drawable/main_setting_bg" android:padding="@dimen/glass_dp_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_10" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintTop_toBottomOf="@id/cls_take">
                <ImageView android:id="@id/iv_more" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:src="@mipmap/ic_ability_more" android:contentDescription="@string/app_image_desc" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_white" android:id="@id/tv_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/h_glass_190" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintBottom_toTopOf="@id/tv_11" app:layout_constraintLeft_toRightOf="@id/iv_more" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
                <TextView android:textSize="@dimen/glass_sp_12" android:textColor="@color/g_color_7" android:id="@id/tv_11" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_8" android:text="@string/h_glass_191" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/iv_more" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_10" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
