<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:background="@color/g_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/titleBar" layout="@layout/layout_title_bar" />
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/glass_dp_2" app:layout_constraintBottom_toTopOf="@id/tv_to_bind" app:layout_constraintTop_toBottomOf="@id/titleBar">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/image_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_100" android:src="@mipmap/bind_glass_default" android:contentDescription="@string/app_name" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/glass_sp_18" android:textColor="@color/g_album_text_2" android:id="@id/tv_title_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_40" android:text="@string/h_glass_94" android:layout_marginStart="@dimen/glass_dp_16" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/image_1" />
            <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_album_text_3" android:id="@id/tv_content_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/glass_dp_18" android:text="@string/h_glass_93" android:lineSpacingExtra="@dimen/glass_dp_8" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <TextView android:textSize="@dimen/glass_sp_14" android:textColor="@color/g_btn_submit_color" android:gravity="center" android:id="@id/tv_to_bind" android:background="@mipmap/btn_bg_screen" android:layout_width="0.0dip" android:layout_height="@dimen/glass_dp_50" android:layout_marginBottom="@dimen/glass_dp_26" android:text="@string/h_glass_95" android:layout_marginStart="@dimen/glass_dp_16" android:layout_marginEnd="@dimen/glass_dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
